# hammurabi

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  rustfmt.toml  test_messages.rs
.github/workflows/: build.yml  ci.yml  release.yml
src/: app.rs  event.rs  main.rs  messages.rs  ui.rs
src/game/: actions.rs  events.rs  mod.rs  scoring.rs  state.rs
src/widgets/: history.rs  input.rs  mod.rs  status.rs
