[package]
name = "hammurabi"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A modern terminal-based recreation of the classic 1968 Hammurabi game"
readme = "README.md"
repository = "https://github.com/yourusername/hammurabi"
license = "MIT"
keywords = ["game", "terminal", "tui", "strategy", "retro"]
categories = ["games", "command-line-utilities"]

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
rand = { version = "0.8", features = ["std_rng"] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
tui-big-text = "0.6"
